# A2W

./: .dockerignore  .gitignore  CONTINUATION.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  pages.yml
crates/a2w-acceptance/: Cargo.toml
crates/a2w-acceptance/src/: lib.rs
crates/a2w-acceptance/tests/: capability_surface.rs  complex_n8n.rs  complex_workflows.rs  end_to_end_moat.rs  engine_property.rs  port_routing_proptest.proptest-regressions  port_routing_proptest.rs  production_sweep.rs  vertical_slice.rs  workflow_gallery.rs
crates/a2w-author/: Cargo.toml
crates/a2w-author/src/: lib.rs
crates/a2w-bench/: Cargo.toml
crates/a2w-bench/benches/: engine_bench.rs  expr_bench.rs  validator_bench.rs  vault_bench.rs
crates/a2w-bench/src/: lib.rs
crates/a2w-engine/: Cargo.toml
crates/a2w-engine/src/: engine.rs  event.rs  item.rs  lib.rs  node.rs
crates/a2w-expr/: Cargo.toml
crates/a2w-expr/src/: lib.rs
crates/a2w-expr/tests/: fuzz_parser.rs
crates/a2w-import/: Cargo.toml
crates/a2w-import/src/: expr.rs  lib.rs  mapping.rs  slugify.rs
crates/a2w-ir/: Cargo.toml  README.md
crates/a2w-ir/src/: error.rs  lib.rs  node.rs  value.rs
crates/a2w-ir/tests/: fuzz_from_json.rs
crates/a2w-llm/: Cargo.toml
crates/a2w-llm/src/: lib.rs
crates/a2w-mcp/: Cargo.toml
crates/a2w-mcp/src/: lib.rs  main.rs
crates/a2w-mcp/tests/: tools.rs
crates/a2w-nodes/: Cargo.toml
crates/a2w-nodes/src/: approval.rs  branch.rs  code_step.rs  http_request.rs  lib.rs  llm_call.rs  loop_node.rs  mcp_tool_call.rs  merge.rs  schedule_trigger.rs  sub_workflow.rs  switch.rs  template.rs  transform.rs  wait.rs  webhook_trigger.rs
crates/a2w-nodes/tests/: integration.rs
crates/a2w-openapi/: Cargo.toml
crates/a2w-openapi/src/: lib.rs  slug.rs
crates/a2w-optimizer/: Cargo.toml
crates/a2w-optimizer/src/: graph.rs  lib.rs  optimize.rs  profile.rs
crates/a2w-search/: Cargo.toml
crates/a2w-search/src/: disjoint.rs  lib.rs  operators.rs
crates/a2w-search/tests/: evolution.rs
crates/a2w-server/: Cargo.toml
crates/a2w-server/src/: auth.rs  dashboard.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  state.rs
crates/a2w-skills/: Cargo.toml
crates/a2w-skills/src/: compose.rs  lib.rs  library.rs  persist.rs  signature.rs
crates/a2w-skills/tests/: persisted_loop.rs  skill_library.rs
crates/a2w-store/: Cargo.toml
crates/a2w-store/src/: lib.rs  resolver.rs  vault.rs
crates/a2w-templates/: Cargo.toml
crates/a2w-templates/src/: lib.rs
crates/a2w-testkit/: Cargo.toml
crates/a2w-testkit/src/: lib.rs
crates/a2w-validator/: Cargo.toml  README.md
crates/a2w-validator/src/: lib.rs  report.rs
crates/a2w-verify/: Cargo.toml
crates/a2w-verify/src/: differential.rs  golden.rs  harness.rs  lib.rs  metamorphic.rs  report.rs  semantic.rs  spec.rs
crates/a2w-verify/tests/: verification.rs
docs/: CONTINUATION.md  LIVE_MULTIAGENT_DEMO.md  LIVE_PRODUCTION_ETL.md  PRODUCTION.md  index.html
examples/: README.md  alert_router.json  complex_etl_live.json  complex_etl_sync.json  complex_lead_routing.json  complex_llm_summarize.json  complex_order_fulfillment.json  complex_ticket_triage.json  deep_pipeline.json  enrich_merge.json  http_fetch_shape.json  order_items_loop.json  order_pricing.json  severity_switch.json
