[package]
name = "a2w-acceptance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "End-to-end vertical-slice acceptance tests proving the full A2W agent loop composes."

# This crate exists only to host cross-crate integration tests; it has no
# library code of its own (so it can dev-depend on every crate without creating
# a normal-dependency cycle).

[dev-dependencies]
a2w-ir = { path = "../a2w-ir" }
a2w-validator = { path = "../a2w-validator" }
a2w-engine = { path = "../a2w-engine" }
a2w-nodes = { path = "../a2w-nodes" }
a2w-testkit = { path = "../a2w-testkit" }
a2w-optimizer = { path = "../a2w-optimizer" }
a2w-verify = { path = "../a2w-verify" }
a2w-skills = { path = "../a2w-skills" }
a2w-search = { path = "../a2w-search" }
a2w-import = { path = "../a2w-import" }
a2w-openapi = { path = "../a2w-openapi" }
a2w-templates = { path = "../a2w-templates" }
a2w-author = { path = "../a2w-author" }
a2w-llm = { path = "../a2w-llm" }
a2w-store = { path = "../a2w-store" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest = { workspace = true }
async-trait = { workspace = true }
