[package]
name = "a2w-author"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Text-to-workflow authoring for A2W: a Generate -> Validate -> Repair loop turning a plain-English prompt into a valid, dry-runnable workflow IR."

[dependencies]
a2w-ir = { workspace = true }
a2w-validator = { workspace = true }
a2w-engine = { workspace = true }
a2w-nodes = { workspace = true }
a2w-templates = { workspace = true }
a2w-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
