[package]
name = "a2w-expr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A2W expression engine: a tiny safe DSL for computed values in workflow params (path lookups, comparisons, boolean logic, a small set of built-in functions)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
