[package]
name = "a2w-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider-agnostic, authoring-time LLM client for A2W (Anthropic Messages API + a deterministic in-memory mock)."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
