[package]
name = "a2w-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) stdio server exposing A2W workflow authoring/validation/run/test/profile/optimize logic as agent-callable wf_* tools."

[[bin]]
name = "a2w-mcp"
path = "src/main.rs"

[dependencies]
a2w-ir = { workspace = true }
a2w-validator = { workspace = true }
a2w-engine = { workspace = true }
a2w-nodes = { workspace = true }
a2w-testkit = { workspace = true }
a2w-optimizer = { workspace = true }
a2w-templates = { workspace = true }
a2w-llm = { workspace = true }
a2w-author = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
serde = { workspace = true }
serde_json = { workspace = true }
# NOTE: tool-input JsonSchema derives use `rmcp::schemars` (schemars 1.x), NOT
# the workspace schemars 0.8, because the rmcp tool macros generate code against
# their own schemars version. We deliberately do not depend on schemars 0.8 here.

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
a2w-llm = { workspace = true }
