[package]
name = "a2w-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "A2W read-only REST + observability HTTP server (axum) over a2w-store and the engine."

[dependencies]
a2w-ir = { workspace = true }
a2w-engine = { workspace = true }
a2w-nodes = { workspace = true }
a2w-validator = { workspace = true }
a2w-store = { workspace = true }
a2w-verify = { workspace = true }
a2w-skills = { workspace = true }
a2w-search = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tokio-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
