[package]
name = "a2w-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A2W workflow test cases and runner: declarative expectations evaluated against engine runs."

[dependencies]
a2w-ir = { workspace = true }
a2w-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
a2w-nodes = { path = "../a2w-nodes" }
tokio = { workspace = true }
