[package]
name = "a2w-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic structural and semantic validation for the A2W IR."

[dependencies]
a2w-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
petgraph = { workspace = true }
